Add rtl style for drop down panel

--- a/lib/ReactViews/Map/Panels/panel.scss
+++ b/lib/ReactViews/Map/Panels/panel.scss
@@ -67,7 +67,10 @@
   z-index: 10;
   top: $padding-small;
   right: $padding-small;
-
+  [dir="rtl"] & {
+    left: $padding-small;
+    right: unset;
+  }
   // &:hover,
   // &:focus {
   //   svg {
