Add rtl style for menu in mobile view

--- a/lib/ReactViews/Mobile/mobile-header.scss
+++ b/lib/ReactViews/Mobile/mobile-header.scss
@@ -101,7 +101,10 @@
   position: absolute;
   right: 0;
   z-index: 1;
-
+  [dir="rtl"] & {
+    right: unset;
+    left: 0;
+  }
   > * {
     display: inline-block;
   }
