--- a/lib/ReactViews/Map/Panels/panel.scss
+++ b/lib/ReactViews/Map/Panels/panel.scss
@@ -31,7 +31,10 @@
   top: $mobile-header-height;
   left: 0;
   margin: 14px 5px 5px 5px;
-
+  [dir="rtl"] & {
+    right: 0;
+    text-align: right;
+  }
   @media (min-width: $sm) {
     position: absolute;
     right: $padding * 2;
