--- a/lib/ReactViews/Search/search-box.scss
+++ b/lib/ReactViews/Search/search-box.scss
@@ -50,6 +50,9 @@ input[type="text"].searchField {
   position: absolute;
   height: $input-height;
   width: $input-height;
+  [dir="rtl"] & {
+    left: 0px;
+  }
   svg {
     height: 15px;
     width: 15px;
