--- a/lib/ReactViews/Search/sidebar-dataset-search-results.scss
+++ b/lib/ReactViews/Search/sidebar-dataset-search-results.scss
@@ -22,6 +22,9 @@
     position: absolute;
     right: $padding + $padding-small;
     top: $padding + $padding-small;
+    [dir="rtl"] & {
+      left: $padding + $padding-small;
+    }
   }
 }
 
