--- a/lib/ReactViews/ExplorerWindow/Tabs/MyDataTab/my-data-tab.scss
+++ b/lib/ReactViews/ExplorerWindow/Tabs/MyDataTab/my-data-tab.scss
@@ -19,9 +19,17 @@
   background: #ffffff;
   border-right: 1px solid $grey-lighter;
   padding-right: 0;
+  [dir="rtl"] & {
+    border-left: 1px solid $grey-lighter;
+    border-right: unset;
+  }
 
   .dataTypeTab {
     margin-right: $padding-small;
+    [dir="rtl"] & {
+      margin-left: $padding-small;
+      margin-right: unset;
+    }
   }
 }
 
@@ -48,6 +56,9 @@
   text-align: left;
   padding: 0 $padding;
   border-top: 1px solid $grey-lighter;
+  [dir="rtl"] & {
+    text-align: right;
+  }
 }
 
 .tab-list {
@@ -57,6 +68,10 @@
   &__item {
     display: inline-block;
     margin-right: 15px;
+    [dir="rtl"] & {
+      margin-left: 15px;
+      margin-right: unset;
+    }
     svg {
       display: inline;
       width: 15px;
@@ -64,6 +79,10 @@
       fill: $color-primary;
       padding-right: $padding-small;
       vertical-align: middle;
+      [dir="rtl"] & {
+        padding-left: $padding-small;
+        padding-right: unset;
+      }
     }
   }
 
@@ -147,7 +166,10 @@
   padding: 3px 10px;
   border: 1px solid #ddd;
   // color: $color-primary;
-
+  [dir="rtl"] & {
+    right: 40px;
+    left: unset;
+  }
   &:hover,
   &:focus {
     // border: 1px solid $color-primary;
@@ -160,6 +182,10 @@
     vertical-align: baseline;
     margin-right: 8px;
     // fill: $color-primary;
+    [dir="rtl"] & {
+      margin-left: 8px;
+      margin-right: unset;
+    }
   }
 }
 
