--- a/lib/ReactViews/ExplorerWindow/explorer-window.scss
+++ b/lib/ReactViews/ExplorerWindow/explorer-window.scss
@@ -16,10 +16,17 @@
   bottom: 0;
   right: 0;
   left: 0;
-
+  [dir="rtl"] & {
+    padding-right: $padding * 2;
+    padding-left: 80px;
+  }
   @media (min-width: $md) {
     padding-left: 30px + $work-bench-width;
     padding-right: 30px;
+    [dir="rtl"] & {
+      padding-right: 30px + $work-bench-width;
+      padding-left: 30px;
+    }
   }
 }
 
@@ -57,6 +64,10 @@
   z-index: $front-component-z-index - 10;
   opacity: 1;
   visibility: visible;
+  [dir="rtl"] & {
+    right: 0;
+    left: unset;
+  }
 }
 
 .btn--close-modal {
@@ -70,7 +81,10 @@
   position: absolute;
   top: 0;
   right: 0;
-
+  [dir="rtl"] & {
+    left: 0;
+    right: unset;
+  }
   &,
   &:hover,
   &:focus {
