--- a/lib/ReactViews/Story/story-editor.scss
+++ b/lib/ReactViews/Story/story-editor.scss
@@ -71,6 +71,11 @@
   border: 0;
   margin-right: $padding;
   padding: 0 !important;
+  [dir="rtl"] & {
+    margin-right: unset;
+    margin-left: $padding;
+  }
+  
 }
 
 .fieldBtn {
@@ -100,4 +105,8 @@
   padding: 5px 15px;
   margin-right: $padding;
   border: 2px solid #ffffff;
+  [dir="rtl"] & {
+    margin-right: unset;
+    margin-left: $padding;
+  }
 }
